# Genealogy-Tree-Creator

./: .gitignore  DOCKER_MODES.md  GENERIC_BUILDER_UPDATE.md  README.md  TRANSFORMATION_SUMMARY.md  docker-compose.prod.yml  docker-compose.yml  ecosystem.config.js  english_family_tree.csv  familyTree.py  package-lock.json  pm2-README.md  spanish_comprehensive_tree.csv  spanish_family_tree.csv  start-all.bat  start-all.sh  start-dev.bat  start-dev.sh  start-prod.bat  start-prod.sh
backend/: AlreadyAvailableTree.ipynb  AlreadyAvilableTree2.ipynb  Format2ExistingTree.ipynb  README.md  familyTree.py  pyproject.toml  requirements.txt
backend/api-gateway/: Dockerfile  pyproject.toml
backend/api-gateway/app/: main.py
backend/api-gateway/app/core/: config.py
backend/api-gateway/tests/: test_main.py
backend/app/: main.py
backend/app/api/: generic_graph_routes.py  routes.py  websocket.py
backend/app/core/: config.py  websocket_manager.py
backend/app/models/: genealogy.py  websocket_models.py
backend/app/services/: wikipedia_service copy.py  wikipedia_service.py
backend/app/utils/: helpers.py
backend/family-tree-service/: .dockerignore  Dockerfile  pyproject.toml  test_labels.py
backend/family-tree-service/app/: main.py
backend/family-tree-service/app/api/: routes.py  websocket.py
backend/family-tree-service/app/core/: config.py  websocket_manager.py
backend/family-tree-service/app/models/: genealogy.py
backend/family-tree-service/app/services/: genealogy_service.py  llm_relationship_extractor.py  relationship_classifier.py  template_tree_extractor.py  wikipedia_service.py
backend/family-tree-service/tests/: test_api_routes.py
backend/language-tree-service/: .env.example  Dockerfile  README.md  english_graph.gexf  english_graph.json  info.ipynb  lang_family_graph.py  language_family_tree.html  language_graph_cache.sqlite  language_relationships_dataset.json  language_relationships_dataset_20251001_122148.json  language_resolver_cache.sqlite  pyproject.toml  test.ipynb  test2.ipynb  test_service.py
backend/language-tree-service/app/: __init__.py  graph_repository.py  main.py
backend/language-tree-service/app/api/: __init__.py  routes.py  websocket.py
backend/language-tree-service/app/core/: config.py  shared.py  websocket_manager.py
backend/language-tree-service/app/models/: __init__.py  graph.py  language.py
backend/language-tree-service/app/services/: __init__.py  classification_service.py  generate_relationships.py  language_info.py  language_service.py  relationship_extraction (10).ipynb  relationship_extraction_v5.ipynb  wikipedia_service.py
backend/language-tree-service/app/utils/: __init__.py  helpers.py
backend/language-tree-service/tests/: test_api_routes.py
backend/species-tree-service/: .dockerignore  .env.example  Dockerfile  README.md  TESTING_PLAN.md  docker-compose.yml  pyproject.toml  test_endpoints.py  test_new_structure.py  test_rank_expansion.py
backend/species-tree-service/app/: __init__.py  main.py
backend/species-tree-service/app/api/: routes.py  websocket.py
backend/species-tree-service/app/core/: config.py  websocket_manager.py
backend/species-tree-service/app/models/: __init__.py  species.py  taxonomy.py  websocket_models.py
backend/species-tree-service/app/services/: __init__.py  gemini_taxonomy.py  (+4 more)
backend/species-tree-service/scripts/: test_eukarya.py  test_expand.py  test_gemini_merge.py  test_guess_rank_header.py  test_guess_rank_header2.py  test_invalid_rank.py  test_suggestions.py  test_wikipedia_fallback.py
backend/species-tree-service/tests/: test_api_routes.py
backend/tests/: test_genealogy_service.py  test_websocket.py
backend/user-service/: DEPENDENCIES.md  Dockerfile  GRAPH_API_README.md  QUICKSTART.md  README.md  pyproject.toml  test_auth_utils.py
backend/user-service/app/: main.py
backend/user-service/tests/: test_api_routes.py
(+77 files in other folders)
