[project]
name = "language-tree-service"
version = "0.1.0"
description = "Language Tree Service - A FastAPI backend for exploring language family relationships"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.14",
    "google-genai",
    "fastapi>=0.116.1",
    "google-genai>=0.5.0",
    "motor>=3.4.0",
    "mwparserfromhell>=0.6.6",
    "numpy>=1.26.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "sentence-transformers>=3.0.0",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
    "torch>=2.8.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
